# 2D-Lights

./: .gitignore  CMakeLists.txt  README.md  main.cpp  scenes.h
lights2d/: lights2d.h
lights2d/src/: color.h  frame_sequence.cpp  frame_sequence.h  image.h  material.h  renderer.cpp  renderer.h  sdf_functions.h  utils.h  vec2.h
src/: color.h  image.h  material.h  renderer.cpp  renderer.h  scene.h  sdf_functions.h  utils.h  vec2.h
